--- a/.github/workflows/master_directoriomultiempresas.yml
+++ b/.github/workflows/master_directoriomultiempresas.yml
@@ -25,6 +25,7 @@ jobs:
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+.github/workflows/master_directoriomultiempresas.yml
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
